deployment/k8s-fabricantes-deploy.yml
# FABRICANTES DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabricantes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabricantes-db
  template:
    metadata:
      labels:
        app: fabricantes-db
    spec:
      containers:
      - name: fabricantes-db
        image: postgres:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: fabricantes-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: fabricantes-data
        persistentVolumeClaim:
          claimName: fabricantes-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: fabricantes-db
spec:
  selector:
    app: fabricantes-db
  ports:
  - port: 5432
    targetPort: 5432
---
# fabricantes API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabricantes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabricantes-api
  template:
    metadata:
      labels:
        app: fabricantes-api
    spec:
      containers:
      - name: fabricantes-api
        image: us-central1-docker.pkg.dev/saludtech-alpes/ccp-images/fabricantes:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3002"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3002
        livenessProbe:
          httpGet:
            path: /manufacturer/ping
            port: 3002
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: fabricantes-api
  annotations:
    cloud.google.com/backend-config: '{"default": "fabricantes-config"}'
spec:
  selector:
    app: fabricantes-api
  ports:
  - port: 3002
    targetPort: 3002
