deployment/k8s-ventas-deploy.yml
# VENTAS DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventas-db
  template:
    metadata:
      labels:
        app: ventas-db
    spec:
      containers:
      - name: ventas-db
        image: postgres:latest
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: ventas-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: ventas-data
        persistentVolumeClaim:
          claimName: ventas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ventas-db
spec:
  selector:
    app: ventas-db
  ports:
  - port: 5432
    targetPort: 5432
---
# VENTAS API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ventas-api
  template:
    metadata:
      labels:
        app: ventas-api
    spec:
      containers:
      - name: ventas-api
        image: us-central1-docker.pkg.dev/saludtech-alpes/ccp-images/ventas:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9001"]
        ports:
        - containerPort: 9001
        resources:
          limits:
            cpu: "0.5"
            memory: "1Gi"
            ephemeral-storage: "2Gi"
          requests:
            cpu: "0.5"
            memory: "1Gi"
            ephemeral-storage: "1Gi"
        livenessProbe:
          httpGet:
            path: /ventas/health
            port: 9001
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 2
---
apiVersion: v1
kind: Service
metadata:
  name: ventas-api
  annotations:
    cloud.google.com/backend-config: '{"default": "ventas-config"}'
spec:
  selector:
    app: ventas-api
  ports:
  - port: 9001
    targetPort: 9001
